# user-website

./: Cargo.toml  down.psql  up.psql
public/: style.css
src/: error.rs  main.rs
src/game/: event.rs  message.rs  mod.rs
src/init/: database.rs  env.rs  mod.rs  regexes.rs
src/model/: session.rs  user.rs
src/routes/: account.rs  game.rs  index.rs  mod.rs  signin.rs  signup.rs
templates/: account.html  error.html  game.html  index.html  layout.html  map.html  not_found.html  signin.html  signup.html
