[package]
name = "user-website"
version = "0.1.0"
authors = ["fabianboesiger <boesiger.fabian@outlook.com>"]
edition = "2018"

[dependencies]
rand = "0.8"
tokio = { version = "1.2", features = ["full"] }
warp = { git = "https://github.com/fabianboesiger/warp.git" }
dotenv = "0.15"
mustache = "0.9"
once_cell = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
bcrypt = "0.9"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "chrono"] }
argon2 = "0.1"
askama = "0.10"
regex = "1.3"
urlencoding = "1.1"